Use threads to sava and synchronize game progress