@@ -23,57 +23,57 @@ import static hr.tvz.cartographers.utils.PaneUtil.*;
 @NoArgsConstructor(access = AccessLevel.PRIVATE)
 public class GameUtil {
 
-    private static GridPane gameGrid;
+    public static final Integer GRID_ROWS = 11;
+    public static final Integer GRID_COLUMNS = 11;
+
+    private static final List<Edict> currentEdicts = new ArrayList<>();
+    private static final List<Edict> edicts = EdictUtil.generateEdicts();
+    private static final boolean[][] isRuins = new boolean[GRID_ROWS][GRID_COLUMNS];
+    private static final TerrainType[][] terrainTypeMap = new TerrainType[GRID_ROWS][GRID_COLUMNS];
+    private static final List<List<int[]>> allUniqueShapes = Shape.getAllPermutationsForAllShapes();
+
+    private static GridPane primaryGameGrid;
+    private static GridPane secondaryGameGrid;
     private static VBox cardDisplay;
     private static Label seasonLabel;
     private static Label scoreLabel;
     private static Label coinLabel;
     private static Label edictLabel;
 
-    private static final Integer GRID_ROWS = 11;
-    private static final Integer GRID_COLUMNS = 11;
-
-    private static final List<Edict> edicts = EdictUtil.generateEdicts();
-    private static final List<List<int[]>> allUniqueShapes = Shape.getAllPermutationsForAllShapes();
-
-    private static final List<Edict> currentEdicts = new ArrayList<>();
-    private static Season currentSeason = Season.SPRING;
+    private static int score = 0;
+    private static int coinCount = 0;
+    private static int currentTime = 0;
+    private static ExploreCard currentCard;
     private static List<int[]> currentShape;
     private static TerrainType currentTerrain;
-    private static int coinCount = 0;
-    private static int score = 0;
-
-    private static final TerrainType[][] terrainTypeMap = new TerrainType[GRID_ROWS][GRID_COLUMNS];
-    private static final boolean[][] isRuins = new boolean[GRID_ROWS][GRID_COLUMNS];
-    private static int currentTime = 0;
-    private static List<ExploreCard> exploreDeck;
-    private static ExploreCard currentCard;
     private static boolean ruinsPending = false;
+    private static List<ExploreCard> exploreDeck;
+    private static Season currentSeason = Season.SPRING;
 
     private static final Random random = new Random();
 
-    public static void initializeGame(GridPane gameGridInput,
+    public static void initializeGame(GridPane primaryGameGridInput,
+                                      GridPane secondaryGameGridInput,
                                       VBox cardDisplayInput,
                                       Label seasonLabelInput,
                                       Label scoreLabelInput,
                                       Label coinLabelInput,
                                       Label edictLabelInput) {
-        gameGrid = gameGridInput;
+        primaryGameGrid = primaryGameGridInput;
+        secondaryGameGrid = secondaryGameGridInput;
         cardDisplay = cardDisplayInput;
         seasonLabel = seasonLabelInput;
         scoreLabel = scoreLabelInput;
         coinLabel = coinLabelInput;
         edictLabel = edictLabelInput;
 
-        // Initialize map
-        for (int i = 0; i < GRID_ROWS; i++) {
-            for (int j = 0; j < GRID_COLUMNS; j++) {
-                terrainTypeMap[i][j] = TerrainType.EMPTY;
-                isRuins[i][j] = false;
+        for (int row = 0; row < GRID_ROWS; row++) {
+            for (int col = 0; col < GRID_COLUMNS; col++) {
+                terrainTypeMap[row][col] = TerrainType.EMPTY;
+                isRuins[row][col] = false;
             }
         }
 
-        // Randomly place mountains
         int mountainsPlaced = 0;
         while (mountainsPlaced < 5) {
             int row = random.nextInt(GRID_ROWS);
@@ -84,7 +84,6 @@ public class GameUtil {
             }
         }
 
-        // Randomly place ruins
         int ruinsPlaced = 0;
         while (ruinsPlaced < 5) {
             int row = random.nextInt(GRID_ROWS);
@@ -95,26 +94,19 @@ public class GameUtil {
             }
         }
 
-        // Update visual representation
         updateMapVisuals();
 
-        // Initialize edicts for the game
         Collections.shuffle(edicts);
-        currentEdicts.add(edicts.get(0)); // A
-        currentEdicts.add(edicts.get(1)); // B
+        currentEdicts.add(edicts.get(0));
+        currentEdicts.add(edicts.get(1));
 
-        // Initialize explore deck
         initializeExploreDeck();
-
-        // Draw first card
         drawNextCard();
-
-        // Initialize UI
         updateUI();
     }
 
     public static void highlightShape(MouseEvent event, boolean shouldHighlight) {
-        if (currentSeason.isFinished())
+        if (currentSeason.isEnd())
             return;
 
         Pane hoveredPane = (Pane) event.getSource();
@@ -128,13 +120,15 @@ public class GameUtil {
     }
 
     public static void placeShape(MouseEvent event) {
-        if (currentSeason.isFinished())
+        if (currentSeason.isEnd())
             return;
 
         Pane clickedPane = (Pane) event.getSource();
         Integer row = GridPane.getRowIndex(clickedPane);
         Integer col = GridPane.getColumnIndex(clickedPane);
-        if (row == null || col == null || currentShape == null || currentTerrain == null) return;
+
+        if (row == null || col == null || currentShape == null || currentTerrain == null)
+            return;
 
         int adjustedBaseRow = adjustCoordinate(row, currentShape.stream().mapToInt(o -> o[0]).min().orElse(0), currentShape.stream().mapToInt(o -> o[0]).max().orElse(0));
         int adjustedBaseCol = adjustCoordinate(col, currentShape.stream().mapToInt(o -> o[1]).min().orElse(0), currentShape.stream().mapToInt(o -> o[1]).max().orElse(0));
@@ -145,8 +139,10 @@ public class GameUtil {
                 int newRow = adjustedBaseRow + offset[0];
                 int newCol = adjustedBaseCol + offset[1];
                 terrainTypeMap[newRow][newCol] = currentTerrain;
-                Pane pane = getPaneAt(gameGrid, newRow, newCol);
-                if (pane != null) updatePaneStyle(terrainTypeMap, isRuins, pane, newRow, newCol);
+                Pane pane = getPaneAt(primaryGameGrid, newRow, newCol);
+
+                if (pane != null)
+                    updatePaneStyle(terrainTypeMap, isRuins, pane, newRow, newCol);
             }
 
             if (ruinsPending)
@@ -157,7 +153,7 @@ public class GameUtil {
     }
 
     private static void updateUI() {
-        if (!currentSeason.isFinished()) {
+        if (!currentSeason.isEnd()) {
             seasonLabel.setText(currentSeason.getLabel());
             edictLabel.setText("Edicts: " + currentEdicts.get(0).getName() + " / " + currentEdicts.get(1).getName());
         } else {
@@ -170,10 +166,11 @@ public class GameUtil {
     }
 
     private static void updateMapVisuals() {
-        for (javafx.scene.Node node : gameGrid.getChildren()) {
+        for (javafx.scene.Node node : primaryGameGrid.getChildren()) {
             if (node instanceof Pane pane) {
                 Integer row = GridPane.getRowIndex(pane);
                 Integer col = GridPane.getColumnIndex(pane);
+
                 if (row != null && col != null) {
                     updatePaneStyle(terrainTypeMap, isRuins, pane, row, col);
                 }
@@ -191,7 +188,7 @@ public class GameUtil {
             return;
 
         if (!exploreDeck.isEmpty()) {
-            currentCard = exploreDeck.remove(0);
+            currentCard = exploreDeck.removeFirst();
             if (currentCard.isRuins()) {
                 ruinsPending = true;
                 drawNextCard();
@@ -211,17 +208,18 @@ public class GameUtil {
 
     private static void handleAmbush() {
         List<int[]> ambushShape = allUniqueShapes.get(random.nextInt(allUniqueShapes.size()));
-        int corner = random.nextInt(4); // 0: TL, 1: TR, 2: BL, 3: BR
+        int corner = random.nextInt(4);
         int baseRow = corner < 2 ? 0 : 10;
         int baseCol = corner % 2 == 0 ? 0 : 10;
         boolean placed = false;
 
-        for (int r = 0; r < GRID_ROWS && !placed; r++) {
-            for (int c = 0; c < GRID_COLUMNS && !placed; c++) {
+        for (int row = 0; row < GRID_ROWS && !placed; row++) {
+            for (int col = 0; col < GRID_COLUMNS && !placed; col++) {
                 boolean canPlace = true;
                 for (int[] offset : ambushShape) {
-                    int newRow = baseRow + r + offset[0];
-                    int newCol = baseCol + c + offset[1];
+                    int newRow = baseRow + row + offset[0];
+                    int newCol = baseCol + col + offset[1];
+
                     if (newRow < 0 || newRow >= GRID_ROWS || newCol < 0 || newCol >= GRID_COLUMNS || terrainTypeMap[newRow][newCol] != TerrainType.EMPTY) {
                         canPlace = false;
                         break;
@@ -229,29 +227,40 @@ public class GameUtil {
                 }
                 if (canPlace) {
                     for (int[] offset : ambushShape) {
-                        int newRow = baseRow + r + offset[0];
-                        int newCol = baseCol + c + offset[1];
+                        int newRow = baseRow + row + offset[0];
+                        int newCol = baseCol + col + offset[1];
                         terrainTypeMap[newRow][newCol] = TerrainType.MONSTER;
-                        Pane pane = getPaneAt(gameGrid, newRow, newCol);
-                        if (pane != null) updatePaneStyle(terrainTypeMap, isRuins, pane, newRow, newCol);
+                        Pane pane = getPaneAt(primaryGameGrid, newRow, newCol);
+
+                        if (pane != null)
+                            updatePaneStyle(terrainTypeMap, isRuins, pane, newRow, newCol);
                     }
+
                     placed = true;
                 }
             }
         }
+
         drawNextCard();
     }
 
     private static void endSeason() {
         int seasonScore = currentEdicts.get(0).score(terrainTypeMap) + currentEdicts.get(1).score(terrainTypeMap);
 
-        for (int r = 0; r < GRID_ROWS; r++) {
-            for (int c = 0; c < GRID_COLUMNS; c++) {
-                if (terrainTypeMap[r][c] == TerrainType.MONSTER) {
-                    if (r > 0 && terrainTypeMap[r - 1][c] == TerrainType.EMPTY) seasonScore--;
-                    if (r < 10 && terrainTypeMap[r + 1][c] == TerrainType.EMPTY) seasonScore--;
-                    if (c > 0 && terrainTypeMap[r][c - 1] == TerrainType.EMPTY) seasonScore--;
-                    if (c < 10 && terrainTypeMap[r][c + 1] == TerrainType.EMPTY) seasonScore--;
+        for (int row = 0; row < GRID_ROWS; row++) {
+            for (int col = 0; col < GRID_COLUMNS; col++) {
+                if (terrainTypeMap[row][col] == TerrainType.MONSTER) {
+                    if (row > 0 && terrainTypeMap[row - 1][col] == TerrainType.EMPTY)
+                        seasonScore--;
+
+                    if (row < 10 && terrainTypeMap[row + 1][col] == TerrainType.EMPTY)
+                        seasonScore--;
+
+                    if (col > 0 && terrainTypeMap[row][col - 1] == TerrainType.EMPTY)
+
+                        seasonScore--;
+                    if (col < 10 && terrainTypeMap[row][col + 1] == TerrainType.EMPTY)
+                        seasonScore--;
                 }
             }
         }
@@ -259,7 +268,7 @@ public class GameUtil {
         score += seasonScore;
         currentSeason = currentSeason.incrementSeason();
 
-        if (!currentSeason.isFinished()) {
+        if (!currentSeason.isEnd()) {
             currentEdicts.clear();
             currentEdicts.add(edicts.get(currentSeason.getPosition() % 2));
             currentEdicts.add(edicts.get(2 + (currentSeason.getPosition() / 2)));
@@ -269,10 +278,9 @@ public class GameUtil {
             updateUI();
         } else {
             cardDisplay.getChildren().clear();
-            // Disable all panes in the grid
-            for (javafx.scene.Node node : gameGrid.getChildren()) {
+            for (javafx.scene.Node node : primaryGameGrid.getChildren()) {
                 if (node instanceof Pane) {
-                    node.setDisable(true); // Disables mouse events and grays out the pane
+                    node.setDisable(true);
                 }
             }
 
@@ -288,10 +296,11 @@ public class GameUtil {
             for (List<int[]> shape : currentCard.getShapes()) {
                 for (TerrainType terrain : currentCard.getTerrains()) {
                     Button option = new Button(terrain.name());
-                    option.setOnAction(e -> {
+                    option.setOnAction(_ -> {
                         currentShape = shape;
                         currentTerrain = terrain;
                     });
+
                     cardDisplay.getChildren().add(option);
                 }
             }
@@ -299,8 +308,12 @@ public class GameUtil {
     }
 
     private static int adjustCoordinate(int base, int minOffset, int maxOffset) {
-        if (base + maxOffset >= 11) return 11 - 1 - maxOffset;
-        if (base + minOffset < 0) return -minOffset;
+        if (base + maxOffset >= 11)
+            return 11 - 1 - maxOffset;
+
+        if (base + minOffset < 0)
+            return -minOffset;
+
         return base;
     }
 
@@ -309,27 +322,35 @@ public class GameUtil {
         for (int[] offset : currentShape) {
             int newRow = baseRow + offset[0];
             int newCol = baseCol + offset[1];
+
             if (newRow < 0 || newRow >= GRID_ROWS || newCol < 0 || newCol >= GRID_COLUMNS || terrainTypeMap[newRow][newCol] != TerrainType.EMPTY) {
                 return false;
             }
-            if (isRuins[newRow][newCol]) overlapsRuins = true;
+
+            if (isRuins[newRow][newCol])
+                overlapsRuins = true;
         }
 
         if (ruinsPending && !overlapsRuins) {
-            for (int r = 0; r < GRID_ROWS; r++) {
-                for (int c = 0; c < GRID_COLUMNS; c++) {
+            for (int row = 0; row < GRID_ROWS; row++) {
+                for (int col = 0; col < GRID_COLUMNS; col++) {
                     boolean canPlace = true;
                     boolean hasRuins = false;
                     for (int[] offset : currentShape) {
-                        int nr = r + offset[0];
-                        int nc = c + offset[1];
-                        if (nr < 0 || nr >= GRID_ROWS || nc < 0 || nc >= GRID_COLUMNS || terrainTypeMap[nr][nc] != TerrainType.EMPTY) {
+                        int newRow = row + offset[0];
+                        int newCol = col + offset[1];
+
+                        if (newRow < 0 || newRow >= GRID_ROWS || newCol < 0 || newCol >= GRID_COLUMNS || terrainTypeMap[newRow][newCol] != TerrainType.EMPTY) {
                             canPlace = false;
                             break;
                         }
-                        if (isRuins[nr][nc]) hasRuins = true;
+
+                        if (isRuins[newRow][newCol])
+                            hasRuins = true;
                     }
-                    if (canPlace && hasRuins) return false;
+
+                    if (canPlace && hasRuins)
+                        return false;
                 }
             }
         }
@@ -338,7 +359,9 @@ public class GameUtil {
     }
 
     private static void drawShape(int baseRow, int baseCol, boolean shouldHighlight) {
-        if (currentShape == null) return;
+        if (currentShape == null)
+            return;
+
         int adjustedBaseRow = adjustCoordinate(baseRow, currentShape.stream().mapToInt(o -> o[0]).min().orElse(0), currentShape.stream().mapToInt(o -> o[0]).max().orElse(0));
         int adjustedBaseCol = adjustCoordinate(baseCol, currentShape.stream().mapToInt(o -> o[1]).min().orElse(0), currentShape.stream().mapToInt(o -> o[1]).max().orElse(0));
 
@@ -353,7 +376,7 @@ public class GameUtil {
         for (int[] offset : currentShape) {
             int newRow = adjustedBaseRow + offset[0];
             int newCol = adjustedBaseCol + offset[1];
-            Pane pane = getPaneAt(gameGrid, newRow, newCol);
+            Pane pane = getPaneAt(primaryGameGrid, newRow, newCol);
             if (pane != null) {
                 if (shouldHighlight) {
                     highlightPane(pane, newRow, newCol, shapePositions, isLegal);
